@@ -5,6 +5,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import rides_service.rides_service.config.mapper.DtoMapper;
 
+import rides_service.rides_service.dto.ride.RideListResponseDto;
 import rides_service.rides_service.dto.ride.RideRequestDto;
 import rides_service.rides_service.dto.ride.RideResponseDto;
 import rides_service.rides_service.entity.Ride;
@@ -33,22 +34,26 @@ public class RideServiceImpl implements RideService {
     @Override
     public RideResponseDto getRideById(Long id) {
         Ride ride = rideRepository.findById(id)
-                .orElseThrow(() -> new RideNotFoundException("Ride not found with id: " + id));
+                .orElseThrow(() -> new RideNotFoundException(String.format("Ride not found with id: " + id)));
         return mapper.convertToDto(ride, RideResponseDto.class);
     }
 
     @Override
-    public List<RideResponseDto> getAllRides() {
+    public RideListResponseDto getAllRides() {
         List<Ride> rides = rideRepository.findAll();
-        return rides.stream()
-                .map(ride -> mapper.convertToDto(ride, RideResponseDto.class))
-                .collect(Collectors.toList());
+        List<RideResponseDto> rideResponseDtos = rides.stream()
+                .map(payment -> mapper.convertToDto(payment, RideResponseDto.class))
+                .toList();
+
+        return RideListResponseDto.builder()
+                .ride(rideResponseDtos)
+                .build();
     }
 
     @Override
     public RideResponseDto updateRide(Long id, RideRequestDto rideRequestDto) {
         Ride existingRide = rideRepository.findById(id)
-                .orElseThrow(() -> new RideNotFoundException("Ride not found with id: " + id));
+                .orElseThrow(() -> new RideNotFoundException(String.format("Ride not found with id: " + id)));
 
         existingRide.setDriverId(rideRequestDto.getDriverId());
         existingRide.setPassengerId(rideRequestDto.getPassengerId());
@@ -67,7 +72,7 @@ public class RideServiceImpl implements RideService {
     @Override
     public void deleteRide(Long id) {
         Ride ride = rideRepository.findById(id)
-                .orElseThrow(() -> new RideNotFoundException("Ride not found with id: " + id));
+                .orElseThrow(() -> new RideNotFoundException(String.format("Ride not found with id: " + id)));
         rideRepository.delete(ride);
     }
 }
